# pocketagent

./: .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml  scheduled_tasks.example.toml
pocketagent/: __init__.py  __main__.py  config.py
pocketagent/agents/: claude_code.py  codex.py  tmux.py
pocketagent/core/: agent.py  attachments.py  commands.py  engine.py  platform.py  ratelimit.py  router.py  schedule_requests.py  scheduled_tasks.py  scheduler.py  session_store.py  textsplit.py  types.py  utils.py  workspace.py
tests/: test_claude_code_protocol.py  test_codex_protocol.py  test_commands.py  test_config.py  test_discord_platform.py  test_engine.py  test_ratelimit.py  test_router.py  test_schedule_requests.py  test_scheduled_tasks.py  test_scheduler.py  test_session_store.py  test_slack_platform.py  test_telegram_platform.py  test_textsplit.py  test_tmux_agent.py  test_utils.py  test_workspace.py
